<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title1">Weather</string>
    <string name="title2">Forecasts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="alarm">Alarm</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="alert_description">Description..</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="add">Add</string>
    <string name="dd_mm_yy">dd_mm_yy</string>
    <string name="_00_00">00:00</string>
    <string name="events">Event</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="fog">Fog</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="sound_type">Sound Type</string>
    <string name="add_alert">Add Alert / Notification: </string>


    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="map">Map</string>
    <string name="search_map">Search In map</string>
    <string name="savePreferences">Save Preferences</string>
    <string name="gps">GPS</string>
    <string name="internetDisconnected">Check Your Internet Connection</string>
    <string name="turnOnLocation">Turn On Location</string>
    <string name="addedToFavorites">Added To Favorites</string>
    <string name="removedFromFavorites">Removed From Favorites</string>
    <string name="locationAlreadyInFavorites">"Location Already In Favorites "</string>
    <string name="locationSelected">Location Selected</string>
    <string name="locationIsAlreadySelected">Location Is Already Selected</string>
    <string name="locationNotFound">Current Location Not Found</string>
    <string name="search_your_location">Search your location..</string>
    <string name="add_fav">Add To Favorite</string>
    <string name="set_loc">Set Location</string>
    <string name="no_fav">No Favorites Items to show</string>
    <string name="no_alerts">No Alerts / Notifications To show</string>
    <string name="internetDisconnectedFav">Check Your Internet connection (cashed item)</string>
    <string name="select_all">Please Choose An Option</string>
    <string name="dark">Dark Mood</string>
    <string name="light_mood">Light Mood</string>
    <string name="mood">Mood</string>
    <string name="units">Units</string>
    <string name="standard">Standard (kelvin - metre/sec)</string>
    <string name="metric">Metric (Celsius - metre/sec)</string>
    <string name="imperial">Imperial (Fahrenheit - miles/hour)</string>
    <string name="access_Gps">No Location Permission, click here to grant</string>
    <string name="denied_prem">Location permission denied</string>
    <string name="loading">Please wait, loading....</string>
    <string name="wentWrong">Something went wrong, please restart the app</string>
    <string name="get_location">Getting your Current Location…</string>

    <string name="metreـsec">metre/sec</string>
    <string name="milesـhour">miles/hour</string>
    <string name="hpa">hPa</string>
    <string name="uv">UV</string>
    <string name="km">km</string>
    <string name="c">°C</string>
    <string name="k">°K</string>
    <string name="f">°F</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_ex">Do you really want to delete this item? You can\'t undo this action</string>
    <string name="removedFromAlerts">Removed From Alerts</string>
    <string name="changeUnit">"Units have been change to: "</string>
    <string name="complete">Please Fill the missing fields</string>
    <string name="openSittings">Open Sittings</string>
    <string name="heat_advisory">Heat Advisory</string>
    <string name="storm">Storm</string>
    <string name="heat">Heat</string>
    <string name="alert">Alert</string>
    <string name="channel_name" translatable="false">channelName</string>
    <string name="channel_description" translatable="false">channelDesc</string>
    <string name="timeInterval">Please choose a valid time and date ranges</string>
    <string name="no_aler">There are no alerts. The weather is clear</string>
    <string name="connProblem">Connection Faild</string>
    <string name="connProblemDesc">Can\'t get weather status,problem connecting to the server</string>
    <string name="alert_detect">"Alert is detected "</string>
    <string name="no">"No "</string>
    <string name="alert_but"> alert, but </string>
    <string name="dismiss">Dismiss</string>
    <string name="NoInter">No Internet Connection</string>
    <string name="NoInterDetail">can\'t get the weather status, check your internet connection</string>
    <string name="showerRain">shower rain</string>
    <string name="fewClouds">few clouds</string>
    <string name="scatteredClouds">scattered clouds</string>
    <string name="brokenClouds">broken clouds</string>
    <string name="mist">mist</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="display">Display over apps permission denied</string>
    <string name="checkUnit">Check your internet connection to apply the changes</string>


</resources>