<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/delete" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/delete_ex"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="8dp"
            android:gravity="center|center_horizontal"
            android:text="@string/are_you_sure"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/my_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="190dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_o"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_o"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>