<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorPrimary">

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language2" />

        <TextView
            android:id="@+id/tv_language2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-4dp"
            android:text="@string/language"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDummy" />

        <RadioGroup
            android:id="@+id/radioGroupLang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language2">

            <RadioButton
                android:id="@+id/btn_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:backgroundTintMode="screen"
                android:buttonTint="@color/dark_orange"
                android:checked="false"
                android:drawableLeft="@drawable/en"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="English" />

            <RadioButton
                android:id="@+id/btn_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"

                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/language"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:paddingTop="6dp"
                android:text="العربية" />
        </RadioGroup>


        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mood" />

        <TextView
            android:id="@+id/tv_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/mood"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <RadioGroup
            android:id="@+id/radioGroupMood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mood">

            <RadioButton
                android:id="@+id/btn_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:backgroundTintMode="screen"
                android:buttonTint="@color/dark_orange"
                android:checked="false"
                android:drawableLeft="@drawable/dark"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/dark" />

            <RadioButton
                android:id="@+id/btn_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"

                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/light"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/light_mood" />
        </RadioGroup>


        <View
            android:id="@+id/viewA"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewB" />

        <View
            android:id="@+id/viewB"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit" />

        <View
            android:id="@+id/viewC"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewA" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/units"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <View
            android:id="@+id/viewB2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit" />

        <RadioGroup
            android:id="@+id/radioGroupUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit">

            <RadioButton
                android:id="@+id/btn_standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:backgroundTintMode="screen"
                android:buttonTint="@color/dark_orange"
                android:checked="false"
                android:drawableLeft="@drawable/kelvin"
                android:drawablePadding="10dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/standard" />

            <RadioButton
                android:id="@+id/btn_metric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"

                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/celsius"
                android:drawablePadding="10dp"
                android:layoutDirection="rtl"
                android:paddingEnd="5dp"
                android:text="@string/metric" />

            <RadioButton
                android:id="@+id/btn_imperia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"
                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/fahrenheit"
                android:drawablePadding="10dp"
                android:layoutDirection="rtl"
                android:paddingEnd="5dp"
                android:text="@string/imperial" />
        </RadioGroup>


        <View
            android:id="@+id/viewX"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewY" />

        <View
            android:id="@+id/viewY"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/location"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewC" />

        <RadioGroup
            android:id="@+id/radioGroupLoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location">

            <RadioButton
                android:id="@+id/btn_Gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:backgroundTintMode="screen"
                android:buttonTint="@color/dark_orange"
                android:checked="false"
                android:drawableLeft="@drawable/gps"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/gps" />

            <RadioButton
                android:id="@+id/btn_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"

                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/map"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/map" />
        </RadioGroup>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageViewDummy"
            android:layout_width="0dp"
            android:layout_height="85dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/setting2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>