<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".startPref.view.StartPrefFragment"
        android:background="?android:attr/colorPrimary">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/language"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDummy" />

        <RadioGroup
            android:id="@+id/radioGroupLang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language">

            <RadioButton
                android:id="@+id/btn_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTintMode="screen"
                android:buttonTint="@color/dark_orange"
                android:checked="false"
                android:drawableLeft="@drawable/en"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="English" />

            <RadioButton
                android:id="@+id/btn_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"

                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/language"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:paddingTop="6dp"
                android:text="العربية" />
        </RadioGroup>

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageViewDummy"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/setting2"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/location"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupLang" />

        <RadioGroup
            android:id="@+id/radioGroupLoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location">

            <RadioButton
                android:id="@+id/btn_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/dark_orange"
                android:buttonTintMode="src_in"
                android:checked="false"
                android:clickable="false"
                android:drawableLeft="@drawable/gps"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/gps" />

            <RadioButton
                android:id="@+id/btn_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="?android:attr/colorPrimaryDark"
                android:buttonTint="@color/dark_orange"
                android:drawableLeft="@drawable/map"
                android:drawablePadding="5dp"
                android:layoutDirection="rtl"
                android:paddingLeft="5dp"
                android:text="@string/map" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/gradient_button_o"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/savePreferences"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>